--- a/private-adm/dashboard/pages/tutores/tutores.css
+++ b/private-adm/dashboard/pages/tutores/tutores.css
@@ -456,7 +456,7 @@ main .info-tutores .perfis-tutores {
 .cards {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 
   margin-top: 1rem;
