--- a/assets/css/animaisPerdidos-style.css
+++ b/assets/css/animaisPerdidos-style.css
@@ -26,9 +26,7 @@
 
 
 
-.meio .criarPost {
-    width: 39.3rem ;
-  }
+
 
   .meio .faixaPost :nth-child(2) {
     width: 20rem;;
@@ -46,12 +44,12 @@
   }
 
   .meio .criarPost img {
-    width: 27rem;
+    width: 19rem;
 }
 
-.meio .categoriasAnimaisPerdidos{
+.meio .categoriasFeed{
     width: 100%;
-    height: 12.5rem;
+   
     display: flex;
     gap: 1rem;
     background: var(--color-white);
@@ -60,18 +58,18 @@
     margin-top: 1rem;
 }
 
-.meio .categoriasAnimaisPerdidos .esquerdoCAP{
+.meio .categoriasFeed .esquerdoCAP{
     display: flex;
     flex-direction: column;
     width: 60%;
     gap: 0.5rem;
 }
 
-.meio .categoriasAnimaisPerdidos .esquerdoCAP :nth-child(2){
+.meio .categoriasFeed .esquerdoCAP :nth-child(2){
     font-size: 0.9rem;
 }
 
-.meio .categoriasAnimaisPerdidos .esquerdoCAP input[type="text"]{
+.meio .categoriasFeed .esquerdoCAP input[type="text"]{
     width: 100%;
     height: 2.7rem;
     border-radius: var(--card-border-radius);
@@ -82,11 +80,11 @@
     font-size: 1rem;
 }
 
-.meio .categoriasAnimaisPerdidos .esquerdoCAP input[type="text"]::placeholder {
+.meio .categoriasFeed .esquerdoCAP input[type="text"]::placeholder {
     font-family: 'Raleway';
 }
 
-.meio .categoriasAnimaisPerdidos .direitoCAP{
+.meio .categoriasFeed .direitoCAP{
     display: flex;
     flex-wrap: wrap;
     width: 50%;
@@ -98,7 +96,7 @@
 }
 
 
-.meio .categoriasAnimaisPerdidos .direitoCAP .categoriaBadge{
+.meio .categoriasFeed .direitoCAP .categoriaBadge{
     width: fit-content;
     height: 2rem;
     border: 1px solid var(--color-purple);
